--- a/css/add.css
+++ b/css/add.css
@@ -202,6 +202,21 @@
 	border-left: 0;
 }
 
+.post .ou_block{
+	flex: 0 0 48%;
+	max-width: 48%;
+	/*float: left;
+    width: 48%;
+	height: 200px;
+	*/
+	padding: 1% 2% 1% 2%;
+	margin: 1%;
+	border-left: 1px solid rgba(107, 107, 107, 0.31);
+	border-right: 1px solid rgba(107, 107, 107, 0.31);
+	border-bottom: 1px solid rgba(107, 107, 107, 0.31);
+	box-shadow: 1px 2px 2px rgba(20%,20%,40%,0.6), 2px 4px 6px rgba(20%,20%,40%,0.4), 3px 6px 12px rgba(20%,20%,40%,0.4);
+}
+
 .post table tr th
 {
 	color:#707070;
@@ -606,7 +621,10 @@ em{display:block;position:absolute;top:-25px;left:-70px;width:55x;}
 		font-size:4vmin !important;
 		line-height: normal;
 	}
-	
+	.post .ou_block{
+		flex: 0 0 100%;
+		max-width: 100%;
+ 	}	
 	.ui.large.menu{
 		height:15%;
 		width:100% ;
