--- a/css/add.css
+++ b/css/add.css
@@ -24,6 +24,11 @@
 	height:100px;*/
 }
 
+.flex-container{
+	display:flex;
+	flex-wrap:wrap;
+}
+
 #sidebar li 
 {
 	cursor:pointer;
@@ -488,7 +493,7 @@ em{display:block;position:absolute;top:-25px;left:-70px;width:55x;}
 }
 .ui.list > .item .content .description.show{
 	display:block;
-	word-break: break-all;
+	word-break: break-word;
     overflow-x: hidden;
 	white-space: pre-wrap;
 	background-color: #efefef;
@@ -496,6 +501,27 @@ em{display:block;position:absolute;top:-25px;left:-70px;width:55x;}
 	border-radius: 1vw;
 	font-size: 2vmin;
 }
+
+.ou_block > .description{
+	display:none;
+	word-break: break-all;
+    overflow-x: hidden;
+	white-space: pre-wrap;
+	background-color: #efefef;
+	padding: 3vw;
+	border-radius: 1vw;
+}
+.ou_block > .description.show{
+	display:block;
+	word-break: break-word;
+    overflow-x: hidden;
+	white-space: pre-wrap;
+	background-color: #efefef;
+	padding: 2vmin;
+	border-radius: 1vw;
+	font-size: 2vmin;
+}
+
 
 .ui.pagination.menu.mobile{
 	display:none;
