--- a/backup/default.bak.css
+++ b/backup/default.bak.css
@@ -110,58 +110,15 @@ hr {
 	height: 110px;
 }
 
-#menu ul { /* 取消ul預設的內縮及樣式 */
-        margin: 0;
-        padding: 0;
-        list-style: square;
-}
 
-#menu ul.drop-down-menu {
-        /*border: #ccc 1px solid;*/
-        display: inline-block;
-        font-family: 'Open Sans', Arial, sans-serif;
-        /*font-size: 13px;*/
 
-}
 
-#menu ul.drop-down-menu li {
-	position: relative;
-	white-space: nowrap;
-	/*border-right: #ccc 1px solid;*/
-	/*padding: 0px 1em;*/
-}
-
-#menu ul.drop-down-menu > li:last-child {
-	border-right: none;
-}
-
-#menu ul.drop-down-menu > li {
-	float: left; /* 只有第一層是靠左對齊*/
-}
-
-#menu ul.drop-down-menu a {
-	display: block;
-	line-height: 30px;
-	text-decoration: none;
-	text-transform: uppercase;
-	font-weight:bold; 
-	color:#000000;
-
-}
-#menu ul.drop-down-menu a:hover { /* 滑鼠滑入按鈕變色*/
-	background-color: #000;
-	color: #fff;
-}
-#menu ul.drop-down-menu li:hover > a { /* 滑鼠移入次選單上層按鈕保持變色*/
-	background-color: #000;
-	color: #fff;
-}
-/*
 #menu ul {
-	display: inline-block;
+	display: inline-block;/*置中s*/
 	margin: 0px;
 	padding: 0px;
 	list-style: square;
+	/*line-height: normal;*/
 }
 
 
@@ -169,6 +126,7 @@ hr {
 #menu li {
 	float: left;
 	padding: 0px 1em;
+	/*margin-left: 80px;*/
 }
 
 #menu a {
@@ -180,61 +138,8 @@ hr {
 	font-weight:bold; 
 	color:#000000;
 }
-*/
-#menu ul.drop-down-menu ul {
-	position: absolute;
-	z-index: 99;
-	/*left: -1px;*/
-	top: 100%;
-    min-width: 180px;
-	background-color: rgb(112, 112, 112);
-	font-size: 12px;
-	font-weight: normal;
-	color: rgb(221, 221, 221);
-	list-style: none;
-/*
-        left: 99999px;
-opacity: 0;
-        -webkit-transition: opacity 0.3s;
-		        transition: opacity 0.3s;
-*/
-}
-#menu ul.drop-down-menu ul li {
-	margin :0px;
-}
-
-#menu ul.drop-down-menu ul li:last-child {
-	border-bottom: none;
-}
-
-#menu ul.drop-down-menu ul { /*隱藏次選單*/
-     display: none;
-}
-
-#menu ul.drop-down-menu li:hover > ul { /* 滑鼠滑入展開次選單*/
-     display: block;
-/*
-	 opacity: 1;
-	         -webkit-transition: opacity 0.3s;
-			         transition: opacity 0.3s;
-					   left: -1px;
-					           border-right: 5px
-*/
- }
-#menu ul.drop-down-menu ul a {
-	color:rgb(221, 221, 221);
-	font-size: 12px;
-	text-align: left;
-	padding: 0rem 1rem;
-	text-transform: none;
-}
-#menu ul.drop-down-menu ul a:hover {
-	color:rgb(255, 255, 255);
-	background-color: rgb(112, 112, 112);
-}
 
 /** PAGE */
-
 #page {
 	position:relative;
 	overflow: hidden;
