--- a/css/default.css
+++ b/css/default.css
@@ -255,6 +255,7 @@ opacity: 0;
 	border: 1px solid #E7EBED;
 	border-radius: 4px;
 	background: #FFF;
+	font-family: Microsoft JhengHei;
 }
 
 .post_res {
