--- a/css/add.css
+++ b/css/add.css
@@ -427,11 +427,16 @@ em{display:block;position:absolute;top:-25px;left:-70px;width:55x;}
 	border-radius: 1vw;
 	font-size: 2vmin;
 }
-
-
 .ui.pagination.menu.mobile{
 	display:none;
 }
+
+.ui.table{
+	table-layout: fixed;
+    word-wrap: break-word;
+}
+
+
 
 /*@media only screen and (min-width: 400px) and (max-width: 700px) and (orientation: portrait){*/
 @media screen and (orientation: portrait),screen and (min-width: 350px) and (max-width: 700px){
@@ -562,10 +567,16 @@ em{display:block;position:absolute;top:-25px;left:-70px;width:55x;}
 		font-size:5vmin !important;
 		line-height: normal;
 	}
+	
 	.post_cell{
 		font-size:4vmin !important;
 		line-height: normal;
 	}
+
+	.post table tr{
+		height:auto;
+	}
+
 	.post .ou_block{
 		flex: 0 0 100%;
 		max-width: 100%;
