--- a/css/add.css
+++ b/css/add.css
@@ -1,4 +1,5 @@
-﻿*
+﻿
+*
 {
 	-webkit-box-sizing: border-box;
      -moz-box-sizing: border-box;
@@ -369,9 +370,9 @@ th
    position:relative; /*讓裡面的兩個子容器絕對定位*/
 }
 
-b{display:block;position:absolute;top:-40px;left:-40px;width:35px;}
+/*b{display:block;position:absolute;top:-40px;left:-40px;width:35px;}
 em{display:block;position:absolute;top:-25px;left:-70px;width:55x;}
-
+*/
 /* semantic + mystyle.css*/
 .ui.list{
 	font-size: 2vmin;
@@ -459,14 +460,6 @@ em{display:block;position:absolute;top:-25px;left:-70px;width:55x;}
     	width: 100%;
 	}
 
-	.ui.container{
-		display:block;
-		position:absolute;
-		font-size: 5vmin;
-		padding: 2vmin;
-		cursor: pointer;
-		margin: 0 !important;
-	}
 
 	.ui.container a{
 	    border: 2px solid #d5b630;
@@ -557,7 +550,7 @@ em{display:block;position:absolute;top:-25px;left:-70px;width:55x;}
 		height:auto ;
 	}
 
-	.image{
+	.post .image{
 		width:100%;
 		height:50vh !important;
 	}
@@ -612,4 +605,107 @@ em{display:block;position:absolute;top:-25px;left:-70px;width:55x;}
 
 }
 
+
+
+.pusher{	
+	position: relative;
+	background: #fff;
+	min-height: 100%;
+
+}
+
+#example .full.height > .toc {
+	position: fixed;
+	z-index: 1;
+	background-color: #1b1c1d;
+	width: 250px;
+	-webkit-box-flex: 0;
+	-webkit-flex: 0 0 auto;
+	-ms-flex: 0 0 auto;
+	flex: 0 0 auto;
+}
+
+
+#example .full.height > .toc .ui.menu {
+    border-radius: 0;
+    border-width: 0 1px 0 0;
+    box-shadow: none;
+    margin: 0;
+    width: inherit;
+    overflow: hidden;
+    will-change: transform;
+    max-height: 100vh;
+    overflow: auto;
+    -webkit-overflow-scrolling: touch;
+}
+
+
+#example .article {
+    -webkit-box-flex: 1;
+    -webkit-flex: 1 1 auto;
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto;
+    min-width: 0px;
+    margin-left: 250px;
+}
+#example .sidebar.menu .logo.image, #example .ui.menu .logo.image {
+	width: 35px;
+	margin-right: 1em;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+#example .full.height > .toc .ui.menu::-webkit-scrollbar{
+	  display: none;
+}
+#example .full.height > .toc .ui.menu:hover::-webkit-scrollbar{
+	  display: block;
+}
+
+/* Hide scrollbar for IE and Edge */
+#example .full.height > .toc .ui.menu::-webkit-scrollbar{
+	    -ms-overflow-style: none;
+}
+
+
+@media only screen and (max-width: 1272px){
+	#example .article {
+		margin-left: 200px;
+	}
+	#example .full.height > .toc {
+    	width: 200px;
+	}
+	#example .fixed.menu > .container {
+	    margin-left: 2rem !important;
+		margin-right: 2rem !important;
+	}
+
+}
+
+@media only screen and (max-width: 1144px){
+	#example  .article {
+		margin-left: 0px;
+	}
+
+	#example .full.height > .toc {
+		display: none;
+	}
+	.fixed.menu > .container {
+	    margin-left: 0em !important;
+		margin-right: 0em !important;
+		width: 100% !important;
+		max-width: none !important;
+	}
+	#example #page {
+	    padding-top: 2em;
+	}
+}
+
+@media only screen and (min-width: 1145px){
+	#example .fixed.main.menu {
+    	display: none;
+	}
+
+
+
+}
 
