--- a/css/default.css
+++ b/css/default.css
@@ -94,7 +94,7 @@ hr {
 }
 
 .container {
-	width: 80%;
+	/*width: 80%;*/
 	margin: 0px auto;
 }
 
@@ -238,15 +238,13 @@ opacity: 0;
 #page {
 	position:relative;
 	overflow: hidden;
-	padding: 3em 0em 0em 0em;
+	padding: 0em 0em 0em 0em;
+	z-index: 3;
+	background:	#1b1c1d;
 }
 
 /** CONTENT */
 
-#content {
-	float: right;
-	width: 80%;
-}
 
 .post {
 	overflow: hidden;
@@ -415,9 +413,14 @@ opacity: 0;
 /* Footer */
 
 #footer {
+	color:	rgba(0,0,0,.4);
+	position: relative;
 	overflow: hidden;
 	padding: 3em 0em;
-	border-top: 1px solid #282A2B;
+	z-index: 3;
+	border-top: 1px solid #DDDDDD;
+	box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.08) inset;
+	background-color: #FAFAFA;
 }
 
 #footer p {
@@ -425,5 +428,5 @@ opacity: 0;
 }
 
 #footer a {
-	color: #c0c0c0;
+	color: #000000;
 }
