--- a/css/add.css
+++ b/css/add.css
@@ -461,12 +461,6 @@ em{display:block;position:absolute;top:-25px;left:-70px;width:55x;}
 	}
 
 
-	.ui.container a{
-	    border: 2px solid #d5b630;
-		background: #d5b630
-	}
-
-
 	#banner-font {
 		width: 100%;
 	}
@@ -667,6 +661,12 @@ em{display:block;position:absolute;top:-25px;left:-70px;width:55x;}
 }
 
 
+@media only screen and (min-width: 1145px){
+	#example .fixed.main.menu {
+    	display: none;
+	}
+
+}
 @media only screen and (max-width: 1272px){
 	#example .article {
 		margin-left: 200px;
@@ -675,11 +675,12 @@ em{display:block;position:absolute;top:-25px;left:-70px;width:55x;}
     	width: 200px;
 	}
 	#example .fixed.menu > .container {
-	    margin-left: 2rem !important;
-		margin-right: 2rem !important;
+	    margin-left: 2rem ;
+		margin-right: 2rem ;
 	}
 
 }
+
 
 @media only screen and (max-width: 1144px){
 	#example  .article {
@@ -689,7 +690,7 @@ em{display:block;position:absolute;top:-25px;left:-70px;width:55x;}
 	#example .full.height > .toc {
 		display: none;
 	}
-	.fixed.menu > .container {
+	#example .fixed.menu > .container {
 	    margin-left: 0em !important;
 		margin-right: 0em !important;
 		width: 100% !important;
@@ -698,14 +699,5 @@ em{display:block;position:absolute;top:-25px;left:-70px;width:55x;}
 	#example #page {
 	    padding-top: 2em;
 	}
-}
-
-@media only screen and (min-width: 1145px){
-	#example .fixed.main.menu {
-    	display: none;
-	}
-
-
-
 }
 
