--- a/css/add.css
+++ b/css/add.css
@@ -217,6 +217,26 @@
 	box-shadow: 1px 2px 2px rgba(20%,20%,40%,0.6), 2px 4px 6px rgba(20%,20%,40%,0.4), 3px 6px 12px rgba(20%,20%,40%,0.4);
 }
 
+.post .query_content{
+	padding: 24px;
+	border-radius: 6px;
+	min-height: 20px;
+	margin-bottom: 20px;
+	background-color: #f5f5f5;
+	border: 1px solid #e3e3e3;
+}
+
+.post .query_content .query_label{
+	margin: 5px;
+	padding: .2em .6em .3em;
+	color: #fff;
+	text-align: center;
+	white-space: nowrap;
+	vertical-align: baseline;
+	border-radius: .25em;
+	background-color: #777;
+}
+
 .post table tr th
 {
 	color:#707070;
@@ -254,7 +274,6 @@
 {
 	text-align: center;
 }
-
 
 
 
@@ -457,7 +476,7 @@ em{display:block;position:absolute;top:-25px;left:-70px;width:55x;}
 
 	button, input, optgroup, select, textarea{
 		margin: 1% 0;
-    	width: 100%;
+    	/*width: 100%;*/
 	}
 
 
