--- a/css/app.css
+++ b/css/app.css
@@ -201,22 +201,6 @@
 	width:100%;
 }
 
-.post .ou_block{
-	flex: 0 0 100%;	
-	max-width: 100%;
-	/*float: left;
-    width: 48%;
-	height: 200px;
-	*/
-	padding: 1% 2% 1% 2%;
-	margin: 1%;
-	border-radius: .28571429rem;
-	border-left: 1px solid rgba(107, 107, 107, 0.31);
-	border-right: 1px solid rgba(107, 107, 107, 0.31);
-	border-bottom: 1px solid rgba(107, 107, 107, 0.31);
-	box-shadow: 1px 2px 2px rgba(20%,20%,40%,0.6), 2px 4px 6px rgba(20%,20%,40%,0.4), 3px 6px 12px rgba(20%,20%,40%,0.4);
-}
-
 .post .query_content{
 	padding: 24px;
 	border-radius: 6px;
@@ -432,24 +416,20 @@ em{display:block;position:absolute;top:-25px;left:-70px;width:55x;}
 	font-size: 2vmin;
 }
 
-.ou_block > .description{
+.ou_block .description{
 	display:none;
-	word-break: break-all;
     overflow-x: hidden;
 	white-space: pre-wrap;
 	background-color: #efefef;
-	padding: 3vw;
 	border-radius: 1vw;
 }
-.ou_block > .description.show,.post.ldap .description{
+.ou_block .description.show,.post.ldap .description{
 	display:block;
 	word-break: break-word;
     overflow-x: hidden;
 	white-space: pre-wrap;
 	background-color: #efefef;
-	padding: 2vmin;
-	border-radius: 1vw;
-	font-size: 2vmin;
+	padding: 1vmin;
 }
 
 .ui.cards > .remaining.card{
@@ -600,10 +580,6 @@ em{display:block;position:absolute;top:-25px;left:-70px;width:55x;}
 		height:auto;
 	}
 
-	.post .ou_block{
-		flex: 0 0 100%;
-		max-width: 100%;
- 	}	
 	.ui.large.menu{
 		height:15%;
 		width:100% ;
@@ -636,25 +612,6 @@ em{display:block;position:absolute;top:-25px;left:-70px;width:55x;}
 	 }
 
 }
-
-
-
-
-@media (min-width: 756px){
-
-	.post .ou_block{
-		flex: 0 0 48%;
-		max-width: 48%;
-	}
-}
-
-@media (min-width: 1100px){
-	.post .ou_block{
-		flex: 0 0 30%;
-		max-width: 30%;
-	}
-}
-
 
 .pusher{	
 	position: relative;
