--- a/css/app.css
+++ b/css/app.css
@@ -201,6 +201,11 @@
 	width:100%;
 }
 
+.post > .ui.header{
+    color:#117692;
+    border-color:#117692;
+}
+
 .post .query_content{
 	padding: 24px;
 	border-radius: 6px;
@@ -277,8 +282,6 @@ th
 	margin-bottom: 10px;
 }
 
-/*???批捆*/
-
 #content > div,.ui.attached.segment > .tabular-content
 {
 	display:none;
@@ -300,74 +303,11 @@ th
  
 }
 
-
-.graduate_img_1
-{
-	width:50% !important;
-	float:left;
-}
-.graduate_img_2
-{
-	width:50% !important;
-	float:right;
-}
-.graduate_img_center
-{
-	width:50% !important;
-	margin:0 auto;
+.blink {
+	animation: blinker 1s linear infinite;
 }
 
-.graduate_img_center_la
-{
-	/*width:100% !important;*/
-	position: relative;
-	width: 100%;
-    height: 624px;
-	margin:0 auto;
-	background-image: url("images/cate.png");
-	/*background-size: contain;*/
-	background-size: 100% 95%;
-	background-repeat: no-repeat;
-	position: relative;
-
-
-}
-.graduate_img_center_la > *
-{
-	position: absolute;
-}
-
-/*
-.lab
-{
-	width:100%;
-	margin-top:25px;
-	
-}
-*/
-#lab *
-{
-	/*border:1px #000 solid*/
-}
-
-#lab
-{
-	display:inline-block;
-	border:1px #E4B207 solid;
-	border-bottom: none;
-	width:100%;
-}
-
-#lab:last-child{
-	display:inline-block;
-	border:1px #E4B207 solid;
-	width:100%;	
-}
-
-#lab > div
-{
-	display: inline-block;
-}
+@keyframes blinker { 40% { opacity: 0.4;}}
 
 .out{
    border-top:40px #D6D3D6 solid; /*上邊框寬度等於表格第一行行高*/
