--- a/css/app.css
+++ b/css/app.css
@@ -410,6 +410,19 @@ div.header a{
 	font-family: Microsoft JhengHei; 
 }
 
+.sitemap {
+    margin-bottom: 1rem;
+    text-align: center;
+}
+
+.sitemap .list > .item {
+    vertical-align: top;
+}
+
+.sitemap .list > .item .header{
+    color: #117692;
+}
+
 /*@media only screen and (min-width: 400px) and (max-width: 700px) and (orientation: portrait){*/
 @media screen and (orientation: portrait),screen and (min-width: 350px) and (max-width: 700px){
     /* For mobile phones: */
