Update MyLDAP and Insert bind_ou

--- a/css/app.css
+++ b/css/app.css
@@ -318,12 +318,12 @@ i.icon.caret, i.icon.square, i.icon.edit{
 
 }
 
-.ui.list .computer.item:hover, .ui.list .user.item:hover{
+.ui.list .computer.item:hover, .ui.list .user.item:hover, .ui.list .ou.header:hover{
     background: #ebedf2;
     cursor: pointer;
 }
 
-.ui.list .computer.item.selected, .ui.list .user.item.selected{
+.ui.list .computer.item.selected, .ui.list .user.item.selected, .ui.list .ou.header.selected{
     background: #bec1c7;
 }
 
