--- a/css/app.css
+++ b/css/app.css
@@ -206,6 +206,11 @@
     border-color:#117692;
 }
 
+.post p.header{
+    color: #4183C4;
+    font-weight: bold;
+}
+
 .post .query_content{
 	padding: 24px;
 	border-radius: 6px;
